fixed placeholder text clipping over navbar

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,7 +8,6 @@
 }
 
 .new-tweet textarea{
-  margin: 0 auto;
   padding: 5px;
   width: 100%;
 }
